kcov fixed packages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: packges
-      run: sudo apt install -y g++7 cppcheck iwyu valgrind clang-tidy libclang-dev libboost-all-dev
+      run: sudo apt install -y libcurl3 g++7 cppcheck iwyu valgrind clang-tidy-6.0 libclang-6.0-dev libboost-all-dev
     - name: kcov
       run: wget https://github.com/SimonKagstrom/kcov/archive/v36.tar.gz && tar xzf v36.tar.gz && cd kcov-36 && mkdir build && cd build && cmake .. -DCMAKE_INSTALL_PREFIX=$HOME/.kcov -DCMAKE_BUILD_TYPE=Release && make -j2 &&  make install
     - name: cmake
