added header only libs
added header only in cmakelis and test changed to tests, home direcory
cleanup and .envrc added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,8 +39,8 @@ set(PROJECT_BUILD                              "${PROJECT_PATH}/build")
 set(SRC_SRC                                    "${PROJECT_PATH}/source")
 set(INC_SRC                                    "${PROJECT_PATH}/include")
 set(EXT_SRC                                    "${PROJECT_PATH}/external")
-set(UTL_SRC                                    "${PROJECT_PATH}/utils")
-set(TEST_SRC                                   "${PROJECT_PATH}/test")
+set(UTL_SRC                                    "${EXT_SRC}/headers")
+set(TEST_SRC                                   "${PROJECT_PATH}/tests")
 
 set(LIB_BUILD                                  "${PROJECT_BUILD}/lib")
 set(BIN_BUILD                                  "${PROJECT_BUILD}/bin")
@@ -249,7 +249,7 @@ if(BUILD_TESTS)
         endif()
     endfunction(add_testing)
 
-    file(GLOB TEST_FILES "test/*.c" "test/*.cpp")
+    file(GLOB TEST_FILES "${TEST_SRC}/*.c" "${TEST_SRC}/*.cpp")
     if(BUILD_TESTS)
         foreach(A_FILE ${TEST_FILES})
             add_testing(${A_FILE})
